_build/html/reports/010_regression.err.log
Traceback (most recent call last):
  File "/Users/corrado/mambaforge/envs/pymc_env/lib/python3.11/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/corrado/mambaforge/envs/pymc_env/lib/python3.11/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/corrado/mambaforge/envs/pymc_env/lib/python3.11/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/corrado/mambaforge/envs/pymc_env/lib/python3.11/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/corrado/mambaforge/envs/pymc_env/lib/python3.11/asyncio/base_events.py", line 653, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "/Users/corrado/mambaforge/envs/pymc_env/lib/python3.11/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/corrado/mambaforge/envs/pymc_env/lib/python3.11/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/corrado/mambaforge/envs/pymc_env/lib/python3.11/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
source("_common.R")
suppressPackageStartupMessages({
    library("rio")
    library("car")
    library("knitr")
    library("markdown")
    library("lavaan")
    library("semPlot")
    library("repr")
})
set.seed(42)
------------------

[0;36m  Cell [0;32mIn[1], line 3[0;36m[0m
[0;31m    library("rio")[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax. Perhaps you forgot a comma?

SyntaxError: invalid syntax. Perhaps you forgot a comma? (2950690952.py, line 3)

